--- a/KeyHunt-Cuda/Makefile
+++ b/KeyHunt-Cuda/Makefile
@@ -34,7 +34,7 @@ endif
 CXX        = g++
 CUDA       = /usr/local/cuda-11.0
 CXXCUDA    = /usr/bin/g++
-NVCC       = $(CUDA)/bin/nvcc
+NVCC       = /opt/conda/bin/nvcc
 # nvcc requires joint notation w/o dot, i.e. "5.2" -> "52"
 ccap       = $(shell echo $(CCAP) | tr -d '.')
 
